updating mobile detail pgs

--- a/fixed.html
+++ b/fixed.html
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-        <img id="backArrow"  src="images/arrow.svg" />
+        <a href="index.html"><img id="backArrow"  src="images/arrow.svg" /></a>
 
 
       <!-- RIGHT COLUMN START -->
@@ -92,7 +92,7 @@
                   onended="audioEnded(this)"
                   src="audio/Fixed_Natalie.m4a"
                 ></audio>
-                <span class="expand"><br /><br />More →</span>
+               
               </p>
 
               <!-- <p class="listen">Listen to the voicemail</p> -->
