--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       content="Calendar Collective is a living archive of alternate calendars."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="reset.css" />
     <link
@@ -62,7 +65,7 @@
             allow="autoplay; fullscreen"
             allowfullscreen
           ></iframe>
-          <p>Project by <a href="#">Kalyani Tupkary</a>. Website built by <a href="#">Jon Packles</a>.</p>
+          <p>Project by <a href="https://www.kalyanitupkary.com/">Kalyani Tupkary</a>. Website built by <a href="https://www.jonpackless.com/">Jon Packles</a>.</p>
         </div>
       </div>
 
@@ -230,7 +233,7 @@
                   onended="audioEnded(this)"
                   src="audio/Fixed_Natalie.m4a"
                 ></audio>
-                <span class="expand"><br /><br />More →</span>
+                <a href="fixed.html"><span class="expand"><br /><br />More →</span></a>
               </p>
 
               <!-- <p class="listen">Listen to the voicemail</p> -->
@@ -390,6 +393,7 @@ https://www.bloomberg.com/news/articles/2014-12-11/the-death-and-life-of-the-13-
                 repealed. In September 1805, Sunday was restored as the day of
                 rest, and from 1 January 1806, the Gregorian calendar was
                 reinstated.”
+                <a href="decimal.html"><span class="expand"><br /><br />More →</span></a>
               </p>
             </div>
 
@@ -425,6 +429,7 @@ https://www.bloomberg.com/news/articles/2014-12-11/the-death-and-life-of-the-13-
                   onended="audioEnded(this)"
                   src="audio/Russian_Automated.m4a"
                 ></audio>
+                <a href="russian.html"><span class="expand"><br /><br />More →</span></a>
               </p>
 
               <!-- <p class="listen">Listen to the voicemail</p> -->
