Undoing the test

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="moreInfo">
             <p>
-              Calendar Collective test 22 is a living archive of alternate calendars. It
+              Calendar Collective is a living archive of alternate calendars. It
               is an ongoing investigation for collecting, cataloguing and
               publishing calendars that are little-known to our world. We use
               openly contributed voicemails as are our unique research material.
