Added phone number for mobile

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               goes down or twilight and occasionally at midnight but sometimes
               even beyond midnight. Some days we are not here at all, but
               lately, we are here most of the time except when we are somewhere
-              else. So, if you would like to contribute, please leave a voicemail at (646) 371-5045.
+              else. So, if you would like to contribute, please leave a voicemail at +1(646) 371-5045.
             </p>
           </div>
         </div>
@@ -514,7 +514,7 @@ https://www.bloomberg.com/news/articles/2014-12-11/the-death-and-life-of-the-13-
           midnight. Some days we are not here at all, but lately, we are here
           most of the time except when we are somewhere else. So, if you would
           like to contribute, please
-          <span id="leaveVoicemail">leave us a voicemail</span>.
+          <span id="leaveVoicemail">leave a voicemail at +1(646) 371-5045.</span>.
         </p>
       </div>
     </div>
