Deleting extra dot

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ https://www.bloomberg.com/news/articles/2014-12-11/the-death-and-life-of-the-13-
           midnight. Some days we are not here at all, but lately, we are here
           most of the time except when we are somewhere else. So, if you would
           like to contribute, please
-          <span id="leaveVoicemail">leave a voicemail at +1(646) 371-5045.</span>.
+          <span id="leaveVoicemail">leave a voicemail at +1(646) 371-5045.</span>
         </p>
       </div>
     </div>
