--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ https://www.bloomberg.com/news/articles/2014-12-11/the-death-and-life-of-the-13-
             </div>
 
             <img src="images/calendars/French_01.jpg" alt="" />
-            <img src="images/calendars/French_02.jpg" alt="" />
+            <img src="images/calendars/French_02.jpeg" alt="" />
             <div class= "infoText">
               <ul class = "references">
                 <li>Image 1: Clock dial displaying both decimal (inside the circle) and duodecimal time (on the outer rim)</li>
