--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             allow="autoplay; fullscreen"
             allowfullscreen
           ></iframe>
-          <p>Project by <a href="https://www.kalyanitupkary.com/">Kalyani Tupkary</a>. Website built by <a href="https://www.jonpackless.com/">Jon Packles</a>.</p>
+          <p>Project by <a href="https://www.kalyanitupkary.com/">Kalyani Tupkary</a>. Website built by <a href="https://www.jonpackles.com/">Jon Packles</a>.</p>
         </div>
       </div>
 
